@@ -1,3 +1,8 @@
+LablGL 0.99:
+------------
+
+* add texture binding functions, contributed by Chris Hecker
+
 LablGL 0.98:
 ------------
 
